fixed scroll on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -94,6 +94,7 @@ html {
 }
 
 .coffeeModal {
+  overflow: auto;
   h3 {
     display: inline;
     color: #332211;
